local flatfile logging via nlog

--- a/src/SFA.Apprenticeships.Web.Recruit/Web.Local.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.Local.config
@@ -7,12 +7,32 @@
     <add key="ida:SessionTimeout" value="60" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
   
-  <nlog:nlog>
-    <nlog:variable name="environment" value="LOCAL" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
-    <nlog:targets>
-      <nlog:target name="fallbacklogger">
-        <nlog:target name="Mail" xdt:Transform="Remove" xdt:Locator="Match(name)"/>
-      </nlog:target>
-    </nlog:targets>
-  </nlog:nlog>
+  <nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform" xmlns="http://www.nlog-project.org/schemas/NLog.xsd">
+    <variable name="environment" value="LOCAL" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
+    <targets xdt:Transform="Replace">
+      <target xsi:type="File" name="flatfilelogger" fileName="C:\logs\Web.Recruit.log" createDirs="true" keepFileOpen="false" encoding="iso-8859-2">
+        <layout xsi:type="JsonLayout">
+          <property name="user" layout="${mdlc:userId}" />
+          <property name="session" layout="${mdlc:sessionId}" />
+          <property name="date" layout="${longdate}" />
+          <property name="level" layout="${level:upperCase=true}" />
+          <property name="logger" layout="${logger}" />
+          <property name="message" layout="${message}" />
+          <property name="exception" layout="${onexception:${exception:format=tostring}}" />
+          <property name="errordata" layout="${onexception:${exception:format=data}}" />
+          <property name="errorcode" layout="${event-context:item=ErrorCode}" />
+          <property name="stacktrace" layout="${onexception:${stacktrace:tostring}}" />
+          <property name="ticks" layout="${ticks}" />
+          <property name="processid" layout="${processid}" />
+          <property name="useragent" layout="${mdlc:UserAgent}" />
+          <property name="referrer" layout="${mdlc:UrlReferrer}" />
+          <property name="userlanguages" layout="${mdlc:UserLanguages}" />
+          <property name="headers" layout="${mdlc:Headers}" />
+        </layout>
+      </target>
+    </targets>
+    <rules xdt:Transform="Replace">
+      <logger name="*" minlevel="Debug" writeTo="flatfilelogger" />
+    </rules>
+  </nlog>
 </configuration>
