--- a/src/SFA.Apprenticeships.Web.Recruit/Web.Dev.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.Dev.config
@@ -10,8 +10,41 @@
   <system.webServer>
     <httpErrors errorMode="Custom" xdt:Transform="SetAttributes(errorMode)"></httpErrors>
   </system.webServer>
-
-  <nlog:nlog>
-    <nlog:variable name="environment" value="DEV" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
-  </nlog:nlog>
+  
+  <nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform" xmlns="http://www.nlog-project.org/schemas/NLog.xsd">
+    <variable name="environment" value="DEV" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
+    <targets xdt:Transform="Replace">
+      <target name="rabbit" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Web.Recruit.{0}" AppId="SFA.Apprenticeships.Web.Recruit">
+        <layout xsi:type="JsonLayout">
+          <property name="user" layout="${mdlc:userId}" />
+          <property name="session" layout="${mdlc:sessionId}" />
+          <property name="application" layout="SFA.Apprenticeships.Web.Recruit" />
+          <property name="environment" layout="${environment}" />
+          <property name="version" layout="${gdc:item=version}" />
+          <property name="date" layout="${longdate}" />
+          <property name="level" layout="${level:upperCase=true}" />
+          <property name="logger" layout="${logger}" />
+          <property name="machinename" layout="${machinename}" />
+          <property name="processname" layout="${processname}" />
+          <property name="message" layout="${message}" />
+          <property name="exception" layout="${onexception:${exception:format=tostring}}" />
+          <property name="errordata" layout="${onexception:${exception:format=data}}" />
+          <property name="errorcode" layout="${event-context:item=ErrorCode}" />
+          <property name="stacktrace" layout="${onexception:${stacktrace:tostring}}" />
+          <property name="ticks" layout="${ticks}" />
+          <property name="processid" layout="${processid}" />
+          <property name="useragent" layout="${mdlc:UserAgent}" />
+          <property name="referrer" layout="${mdlc:UrlReferrer}" />
+          <property name="userlanguages" layout="${mdlc:UserLanguages}" />
+          <property name="currentculture" layout="${mdlc:CurrentCulture}" />
+          <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
+          <property name="headers" layout="${mdlc:Headers}" />
+        </layout>
+      </target>
+    </targets>
+    <rules xdt:Transform="Replace">
+      <logger name="*" minlevel="Debug" writeTo="fallbacklogger" />
+    </rules>
+  </nlog>
+  
 </configuration>
