--- a/src/SFA.Apprenticeships.Web.Recruit/Web.Local.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.Local.config
@@ -32,7 +32,7 @@
       </target>
     </targets>
     <rules xdt:Transform="Replace">
-      <logger name="*" minlevel="Debug" writeTo="flatfilelogger" />
+      <logger name="*" minlevel="Info" writeTo="flatfilelogger" />
     </rules>
   </nlog>
 </configuration>
