--- a/src/SFA.Apprenticeships.Web.Recruit/Web.Dev.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.Dev.config
@@ -43,7 +43,7 @@
       </target>
     </targets>
     <rules xdt:Transform="Replace">
-      <logger name="*" minlevel="Debug" writeTo="fallbacklogger" />
+      <logger name="*" minlevel="Info" writeTo="fallbacklogger" />
     </rules>
   </nlog>
   
