--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
@@ -32,7 +32,11 @@
         </outputCacheProfiles>
       </outputCacheSettings>
     </caching>
-    <customErrors mode="Off" />
+    <customErrors mode="RemoteOnly" redirectMode="ResponseRewrite">
+      <error statusCode="404" redirect="~/404.aspx" />
+      <error statusCode="403" redirect="~/403.aspx" />
+      <error statusCode="500" redirect="~/500.aspx" />
+    </customErrors>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -122,8 +126,7 @@
     </httpProtocol>
     <httpErrors errorMode="Detailed" existingResponse="Replace">
       <remove statusCode="410" />
-      <error statusCode="410" subStatusCode="1" path="ApprenticeshipNotFound.html" responseMode="File" />
-      <error statusCode="410" subStatusCode="2" path="TraineeshipNotFound.html" responseMode="File" />
+      <error statusCode="410" subStatusCode="1" path="VacancyNotFound.html" responseMode="File" />
       <remove statusCode="404" />
       <error statusCode="404" path="404.html" responseMode="File" />
       <remove statusCode="403" />
