--- a/src/SFA.Apprenticeships.Web.Manage/Web.Local.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.Local.config
@@ -6,6 +6,10 @@
     <add key="ida:Wtrealm" value="https://manage.findapprenticeship.service.gov.uk/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="ida:SessionTimeout" value="60" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
+
+  <system.webServer>
+    <httpErrors errorMode="Custom" xdt:Transform="SetAttributes(errorMode)"></httpErrors>
+  </system.webServer>
   
   <nlog:nlog>
     <nlog:variable name="environment" value="LOCAL" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
