API: fix max path issue.

--- a/src/SFA.Apprenticeship.Api.AvmsCompatability/Web.config
+++ b/src/SFA.Apprenticeship.Api.AvmsCompatability/Web.config
@@ -30,26 +30,20 @@
 
     <bindings>
       <basicHttpBinding>
-        <binding name="LegacyReferenceDataServiceBinding"  maxReceivedMessageSize="2147483647">
+        <binding name="AvRdsBinding" maxReceivedMessageSize="2147483647">
           <security mode="Transport" />
         </binding>
+        <binding name="BasicHttpBinding_IReferenceData" />
       </basicHttpBinding>
-      <!--
-      <wsHttpBinding>
-        <binding name="WSHttpBinding_Direct" maxReceivedMessageSize="2147483647">
-          <security mode="None">
-            <transport clientCredentialType="None" />
-            <message clientCredentialType="None" />
-          </security>
-        </binding>
-      </wsHttpBinding>
-      -->
     </bindings>
 
     <client>
       <endpoint address="https://apprenticeshipvacancymatchingservice.lsc.gov.uk/services/ReferenceData/ReferenceData51.svc"
-        binding="basicHttpBinding" bindingConfiguration="LegacyReferenceDataServiceBinding"
-        contract="LegacyReferenceDataService.IReferenceData" name="LegacyReferenceDataService" />
+        binding="basicHttpBinding" bindingConfiguration="AvRdsBinding"
+        contract="AvRds.IReferenceData" name="AvRds" />
+      <endpoint address="http://apprenticeshipvacancymatchingservice.lsc.gov.uk/services/ReferenceData/ReferenceData51.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReferenceData"
+        contract="AvRds.IReferenceData" name="BasicHttpBinding_IReferenceData" />
     </client>
 
     <services>
