--- a/src/SFA.Apprenticeship.Api.AvmsCompatability/SFA.Apprenticeship.Api.AvmsCompatability.csproj
+++ b/src/SFA.Apprenticeship.Api.AvmsCompatability/SFA.Apprenticeship.Api.AvmsCompatability.csproj
@@ -166,42 +166,42 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-    <None Include="Service References\LegacyReferenceDataService\ReferenceData51.wsdl" />
-    <None Include="Service References\LegacyReferenceDataService\ReferenceData51.xsd">
+    <None Include="Service References\AvRds\ReferenceData51.wsdl" />
+    <None Include="Service References\AvRds\ReferenceData51.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\LegacyReferenceDataService\ReferenceData511.xsd">
+    <None Include="Service References\AvRds\ReferenceData511.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\LegacyReferenceDataService\ReferenceDataService.wsdl" />
-    <Content Include="Service References\LegacyReferenceDataService\SFA.Apprenticeship.Api.AvmsCompatability.LegacyReferenceDataService.ApprenticeshipFrameworkAndOccupationData.datasource">
+    <None Include="Service References\AvRds\ReferenceDataService.wsdl" />
+    <Content Include="Service References\AvRds\SFA.Apprenticeship.Api.AvmsCompatability.AvRds.ApprenticeshipFrameworkAndOccupationData1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Service References\LegacyReferenceDataService\SFA.Apprenticeship.Api.AvmsCompatability.LegacyReferenceDataService.CountyData.datasource">
+    <Content Include="Service References\AvRds\SFA.Apprenticeship.Api.AvmsCompatability.AvRds.CountyData1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Service References\LegacyReferenceDataService\SFA.Apprenticeship.Api.AvmsCompatability.LegacyReferenceDataService.ErrorCodesData.datasource">
+    <Content Include="Service References\AvRds\SFA.Apprenticeship.Api.AvmsCompatability.AvRds.ErrorCodesData1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Service References\LegacyReferenceDataService\SFA.Apprenticeship.Api.AvmsCompatability.LegacyReferenceDataService.GetApprenticeshipFrameworksResponse.datasource">
+    <Content Include="Service References\AvRds\SFA.Apprenticeship.Api.AvmsCompatability.AvRds.GetApprenticeshipFrameworksResponse1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Service References\LegacyReferenceDataService\SFA.Apprenticeship.Api.AvmsCompatability.LegacyReferenceDataService.GetCountiesResponse.datasource">
+    <Content Include="Service References\AvRds\SFA.Apprenticeship.Api.AvmsCompatability.AvRds.GetCountiesResponse1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Service References\LegacyReferenceDataService\SFA.Apprenticeship.Api.AvmsCompatability.LegacyReferenceDataService.GetErrorCodesResponse.datasource">
+    <Content Include="Service References\AvRds\SFA.Apprenticeship.Api.AvmsCompatability.AvRds.GetErrorCodesResponse1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Service References\LegacyReferenceDataService\SFA.Apprenticeship.Api.AvmsCompatability.LegacyReferenceDataService.GetLocalAuthoritiesResponse.datasource">
+    <Content Include="Service References\AvRds\SFA.Apprenticeship.Api.AvmsCompatability.AvRds.GetLocalAuthoritiesResponse1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Service References\LegacyReferenceDataService\SFA.Apprenticeship.Api.AvmsCompatability.LegacyReferenceDataService.GetRegionResponse.datasource">
+    <Content Include="Service References\AvRds\SFA.Apprenticeship.Api.AvmsCompatability.AvRds.GetRegionResponse1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Service References\LegacyReferenceDataService\SFA.Apprenticeship.Api.AvmsCompatability.LegacyReferenceDataService.LocalAuthorityData.datasource">
+    <Content Include="Service References\AvRds\SFA.Apprenticeship.Api.AvmsCompatability.AvRds.LocalAuthorityData1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Service References\LegacyReferenceDataService\SFA.Apprenticeship.Api.AvmsCompatability.LegacyReferenceDataService.RegionData.datasource">
+    <Content Include="Service References\AvRds\SFA.Apprenticeship.Api.AvmsCompatability.AvRds.RegionData1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
     <None Include="Web.Local.config">
@@ -226,10 +226,10 @@
   <ItemGroup>
     <Content Include="ReferenceData51.svc" />
     <Content Include="ReferenceDataService.svc" />
-    <None Include="Service References\LegacyReferenceDataService\ReferenceData51.disco" />
-    <None Include="Service References\LegacyReferenceDataService\configuration91.svcinfo" />
-    <None Include="Service References\LegacyReferenceDataService\configuration.svcinfo" />
-    <None Include="Service References\LegacyReferenceDataService\Reference.svcmap">
+    <None Include="Service References\AvRds\ReferenceData51.disco" />
+    <None Include="Service References\AvRds\configuration91.svcinfo" />
+    <None Include="Service References\AvRds\configuration.svcinfo" />
+    <None Include="Service References\AvRds\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
@@ -300,7 +300,7 @@
     <Compile Include="FaultContracts\Version51\SystemFaultContract.cs" />
     <Compile Include="IoC\IoC.cs" />
     <Compile Include="Mappers\Version51\ApprenticeshipFrameworkMapper.cs" />
-    <Compile Include="Mappers\Version51\LegacyReferenceDataServiceMapper.cs" />
+    <Compile Include="Mappers\Version51\AvReferenceDataServiceMapper.cs" />
     <Compile Include="MessageContracts\Version50\BulkVacancyUploadRequest.cs" />
     <Compile Include="MessageContracts\Version50\BulkVacancyUploadResponse.cs" />
     <Compile Include="MessageContracts\Version50\GetApprenticeshipFrameworksRequest.cs" />
@@ -371,7 +371,7 @@
     <Compile Include="MessageContracts\Version51\VacancyUploadRequest.cs" />
     <Compile Include="MessageContracts\Version51\VacancyUploadResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service References\LegacyReferenceDataService\Reference.cs">
+    <Compile Include="Service References\AvRds\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -411,7 +411,7 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Service References\LegacyReferenceDataService\" />
+    <WCFMetadataStorage Include="Service References\AvRds\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
