--- a/src/SFA.Apprenticeships.Web.Manage/Web.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.config
@@ -178,48 +178,13 @@
     </extensions>
     <variable name="environment" value="Local" />
     <targets async="true">
-      <target xsi:type="FallbackGroup" name="fallbacklogger" returnToFirstOnSuccess="true">
-        <target name="rabbit" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Web.Manage.{0}" AppId="SFA.Apprenticeships.Web.Manage">
-          <layout xsi:type="JsonLayout">
-            <property name="user" layout="${mdlc:userId}" />
-            <property name="session" layout="${mdlc:sessionId}" />
-            <property name="application" layout="SFA.Apprenticeships.Web.Manage" />
-            <property name="environment" layout="${environment}" />
-            <property name="version" layout="${gdc:item=version}" />
-            <property name="date" layout="${longdate}" />
-            <property name="level" layout="${level:upperCase=true}" />
-            <property name="logger" layout="${logger}" />
-            <property name="machinename" layout="${machinename}" />
-            <property name="processname" layout="${processname}" />
-            <property name="message" layout="${message}" />
-            <property name="exception" layout="${onexception:${exception:format=tostring}}" />
-            <property name="errordata" layout="${onexception:${exception:format=data}}" />
-            <property name="errorcode" layout="${event-context:item=ErrorCode}" />
-            <property name="stacktrace" layout="${onexception:${stacktrace:tostring}}" />
-            <property name="ticks" layout="${ticks}" />
-            <property name="processid" layout="${processid}" />
-            <property name="useragent" layout="${mdlc:UserAgent}" />
-            <property name="referrer" layout="${mdlc:UrlReferrer}" />
-            <property name="userlanguages" layout="${mdlc:UserLanguages}" />
-            <property name="currentculture" layout="${mdlc:CurrentCulture}" />
-            <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
-            <property name="headers" layout="${mdlc:Headers}" />
-          </layout>
-        </target>
-      </target>
-      <!--
-      <target name="AzureEventHub" xsi:type="AzureEventHubTarget" EventHubPath="log" EventHubConnectionStringSettingName="ConfigurationEventHubLogConnectionString">
+      <target xsi:type="File" name="flatfilelogger" fileName="C:\logs\Web.Manage.log" createDirs="true" keepFileOpen="false" encoding="iso-8859-2">
         <layout xsi:type="JsonLayout">
           <property name="user" layout="${mdlc:userId}" />
           <property name="session" layout="${mdlc:sessionId}" />
-          <property name="application" layout="SFA.Apprenticeships.Web.Manage" />
-          <property name="environment" layout="${environment}" />
-          <property name="version" layout="${gdc:item=version}" />
-          <property name="date" layout="${date:universalTime=true:format=yyyy-MM-ddTHH\:mm\:ss.fffZ}" />
+          <property name="date" layout="${longdate}" />
           <property name="level" layout="${level:upperCase=true}" />
           <property name="logger" layout="${logger}" />
-          <property name="machinename" layout="${machinename}" />
-          <property name="processname" layout="${processname}" />
           <property name="message" layout="${message}" />
           <property name="exception" layout="${onexception:${exception:format=tostring}}" />
           <property name="errordata" layout="${onexception:${exception:format=data}}" />
@@ -230,15 +195,12 @@
           <property name="useragent" layout="${mdlc:UserAgent}" />
           <property name="referrer" layout="${mdlc:UrlReferrer}" />
           <property name="userlanguages" layout="${mdlc:UserLanguages}" />
-          <property name="currentculture" layout="${mdlc:CurrentCulture}" />
-          <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
           <property name="headers" layout="${mdlc:Headers}" />
         </layout>
       </target>
-      -->
     </targets>
     <rules>
-      <logger name="*" minlevel="Debug" writeTo="fallbacklogger" />
+      <logger name="*" minlevel="Debug" writeTo="flatfilelogger" />
     </rules>
   </nlog>
 </configuration>
