Attempting to resolve import conflicts

--- a/src/SFA.Apprenticeship.Api.AvService/Web.config
+++ b/src/SFA.Apprenticeship.Api.AvService/Web.config
@@ -38,12 +38,8 @@
     </bindings>
 
     <client>
-      <endpoint address="https://apprenticeshipvacancymatchingservice.lsc.gov.uk/services/ReferenceData/ReferenceData51.svc"
-        binding="basicHttpBinding" bindingConfiguration="AvRdsBinding"
-        contract="AvRds.IReferenceData" name="AvRds" />
-      <endpoint address="http://apprenticeshipvacancymatchingservice.lsc.gov.uk/services/ReferenceData/ReferenceData51.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReferenceData"
-        contract="AvRds.IReferenceData" name="BasicHttpBinding_IReferenceData" />
+      <endpoint address="https://apprenticeshipvacancymatchingservice.lsc.gov.uk/services/ReferenceData/ReferenceData51.svc" binding="basicHttpBinding" bindingConfiguration="AvRdsBinding" contract="AvRds.IReferenceData" name="AvRds" />
+      <endpoint address="http://apprenticeshipvacancymatchingservice.lsc.gov.uk/services/ReferenceData/ReferenceData51.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReferenceData" contract="AvRds.IReferenceData" name="BasicHttpBinding_IReferenceData" />
     </client>
 
     <services>
