--- a/src/SFA.Apprenticeship.Api.AvService/packages.config
+++ b/src/SFA.Apprenticeship.Api.AvService/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net452" />
   <package id="EnterpriseLibrary.ExceptionHandling" version="6.0.1304.0" targetFramework="net452" />
   <package id="EnterpriseLibrary.ExceptionHandling.WCF" version="6.0.1304.0" targetFramework="net452" />
