Fixed logging config in Manage.Web

--- a/src/SFA.Apprenticeships.Web.Manage/Web.Dev.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.Dev.config
@@ -14,7 +14,7 @@
   <nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform" xmlns="http://www.nlog-project.org/schemas/NLog.xsd">
     <variable name="environment" value="DEV" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
     <targets xdt:Transform="Replace">
-      <target name="rabbit" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Web.Manage.{0}" AppId="SFA.Apprenticeships.Web.Manage">
+      <target name="fallbacklogger" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Web.Manage.{0}" AppId="SFA.Apprenticeships.Web.Manage">
         <layout xsi:type="JsonLayout">
           <property name="user" layout="${mdlc:userId}" />
           <property name="session" layout="${mdlc:sessionId}" />
