--- a/src/SFA.Apprenticeships.Application.Interfaces/SFA.Apprenticeships.Application.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Application.Interfaces/SFA.Apprenticeships.Application.Interfaces.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Providers\IProviderService.cs" />
     <Compile Include="ReferenceData\IReferenceDataService.cs" />
     <Compile Include="Search\AggregationResult.cs" />
+    <Compile Include="DateTime\IDateTimeService.cs" />
     <Compile Include="Users\IProviderUserAccountService.cs" />
     <Compile Include="Users\IUserProfileService.cs" />
     <Compile Include="Vacancies\ApprenticeshipSearchField.cs" />
