--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -312,10 +312,14 @@
     <Compile Include="IoC\ManagementWebRegistry.cs" />
     <Compile Include="IoC\StructureMapScopeModule.cs" />
     <Compile Include="Providers\AgencyUserProvider.cs" />
+    <Compile Include="Providers\IVacancyProvider.cs" />
+    <Compile Include="Providers\VacancyProvider.cs" />
     <Compile Include="ViewModels\AgencyUserViewModel.cs" />
     <Compile Include="Providers\IAgencyUserProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\HomeViewModel.cs" />
+    <Compile Include="ViewModels\VacancySummaryViewModel.cs" />
     <Compile Include="Views\Shared\ValidationSummary.generated.cs">
       <DependentUpon>ValidationSummary.cshtml</DependentUpon>
       <AutoGen>True</AutoGen>
