Toggle based on training type

--- a/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Vacancies\Apprenticeships\ApprenticeshipVacancyDetail.cs" />
     <Compile Include="Vacancies\ProviderVacancies\DurationType.cs" />
     <Compile Include="Vacancies\ProviderVacancies\ProviderVacancyStatuses.cs" />
+    <Compile Include="Vacancies\ProviderVacancies\TrainingType.cs" />
     <Compile Include="Vacancies\ProviderVacancies\WageType.cs" />
     <Compile Include="Vacancies\ProviderVacancies\WageUnit.cs" />
     <Compile Include="Vacancies\Traineeships\TraineeshipVacancyDetail.cs" />
