--- a/src/SFA.Apprenticeships.Web.Manage.UnitTests/SFA.Apprenticeships.Web.Manage.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage.UnitTests/SFA.Apprenticeships.Web.Manage.UnitTests.csproj
@@ -137,9 +137,12 @@
     <Compile Include="Factory\TeamListFactory.cs" />
     <Compile Include="Mediators\AgencyUser\AgencyUserMediatorBuilder.cs" />
     <Compile Include="Mediators\AgencyUser\AgencyUserMediatorTests.cs" />
+    <Compile Include="Mediators\Vacancy\VacancyMediatorBuilder.cs" />
+    <Compile Include="Mediators\Vacancy\VacancyMediatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\AgencyUser\AgencyUserProviderBuilder.cs" />
     <Compile Include="Providers\AgencyUser\AgencyUserProviderTests.cs" />
+    <Compile Include="Providers\VacancyProvider\VacancyProviderBuilder.cs" />
     <Compile Include="Providers\VacancyProvider\VacancyProviderTests.cs" />
   </ItemGroup>
   <ItemGroup>
