--- a/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
@@ -147,11 +147,18 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="App_Start\RazorGeneratorMvcStart.cs" />
+    <Compile Include="Constants\ViewModels\EmployerFilterViewModelMessages.cs" />
+    <Compile Include="Constants\ViewModels\EmployerSearchViewModelMessages.cs" />
     <Compile Include="Constants\ViewModels\NewVacancyViewModelMessages.cs" />
     <Compile Include="Constants\ViewModels\ProviderSiteEmployerLinkViewModelMessages.cs" />
     <Compile Include="Constants\ViewModels\ProviderSiteViewModelMessages.cs" />
     <Compile Include="Constants\ViewModels\VacancyViewModelMessages.cs" />
     <Compile Include="Constants\Wages.cs" />
+    <Compile Include="Converters\AddressViewModelConverter.cs" />
+    <Compile Include="Converters\ApprenticeshipVacancyConverter.cs" />
+    <Compile Include="Converters\EmployerViewModelConverter.cs" />
+    <Compile Include="Converters\ProviderSiteEmployerLinkViewModelConverter.cs" />
+    <Compile Include="Converters\ProviderSiteViewModelConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validators\Common.cs" />
     <Compile Include="Validators\Provider\ProviderSiteEmployerLinkViewModelValidator.cs" />
@@ -164,6 +171,9 @@
     <Compile Include="Validators\Vacancy\VacancyViewModelValidator.cs" />
     <Compile Include="ViewModels\Provider\ProviderSiteEmployerLinkViewModel.cs" />
     <Compile Include="ViewModels\Provider\ProviderSiteViewModel.cs" />
+    <Compile Include="ViewModels\VacancyPosting\EmployerFilterViewModel.cs" />
+    <Compile Include="ViewModels\VacancyPosting\EmployerResultViewModel.cs" />
+    <Compile Include="ViewModels\VacancyPosting\EmployerSearchViewModel.cs" />
     <Compile Include="ViewModels\Vacancy\EmployerViewModel.cs" />
     <Compile Include="ViewModels\Vacancy\NewVacancyViewModel.cs" />
     <Compile Include="ViewModels\Vacancy\StandardViewModel.cs" />
