--- a/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
@@ -105,10 +105,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mappers\AddressMapperTests.cs" />
+    <Compile Include="Mappers\ApprenticeshipVacancyQueryMapperTests.cs" />
     <Compile Include="Mappers\ApprenticeshipVacancyMapperTests.cs" />
     <Compile Include="Mappers\VacancyDurationMapperTests.cs" />
     <Compile Include="Mappers\WageMapperTests.cs" />
-    <Compile Include="Providers\Version51\VacancyDetailsProviderTests.cs" />
+    <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByQueryTests.cs" />
+    <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByReferenceNumberTests.cs" />
     <Compile Include="ServiceImplementation\Version51\ReferenceDataServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
