Unit testing around validation summary and fix for date validation

--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -168,6 +168,13 @@
     <Compile Include="Validators\Providers\ProviderSiteEmployerLinkViewModelValidatorTests.cs" />
     <Compile Include="Validators\Providers\ProviderSiteSearchViewModelValidatorTests.cs" />
     <Compile Include="Validators\ProviderUser\ProviderUserViewModelValidatorTests.cs" />
+    <Compile Include="Views\Shared\ChildViewModel.cs" />
+    <Compile Include="Views\Shared\ChildViewModelValidator.cs" />
+    <Compile Include="Views\Shared\ParentViewModel.cs" />
+    <Compile Include="Views\Shared\ParentViewModelValidator.cs" />
+    <Compile Include="Views\Shared\ValidationSummaryViewModelValidator.cs" />
+    <Compile Include="Views\Shared\ValidationSummaryDocument.cs" />
+    <Compile Include="Views\Shared\ValidationSummaryTests.cs" />
     <Compile Include="Validators\UriValidatorTests.cs" />
     <Compile Include="Validators\VacancyPosting\MandatoryDateChecks.cs" />
     <Compile Include="Validators\VacancyPosting\MandatoryHoursAndDurationConditionTests.cs" />
@@ -182,6 +189,7 @@
     <Compile Include="Validators\VacancyPosting\VacancySummaryViewModelClientValidatorTests.cs" />
     <Compile Include="Validators\VacancyPosting\PreviewVacancyViewModelServerValidatorTests.cs" />
     <Compile Include="Validators\VacancyPosting\VacancySummaryViewModelServerValidatorTests.cs" />
+    <Compile Include="Views\Shared\ValidationSummaryViewModel.cs" />
     <Compile Include="Views\VacancyPosting\VacancyQuestionsTests.cs" />
     <Compile Include="Views\VacancyPosting\RequirementsProspectsTests.cs" />
     <Compile Include="Views\VacancyPosting\PreviewVacancyTests.cs" />
